package com.dianping.dpsf.protocol.protobuf;

option java_package="com.dianping.dpsf.protocol.protobuf";
option java_outer_classname="DPSFProtos";

message Request {

	required int32  messageType = 1;
	optional int32  callType = 2;
	required int64  transferId = 3;
	optional string rpcVersion = 4;
	optional int32  timeout = 5;
	
	optional string serviceName = 6;
	optional string methodName = 7;
	optional bytes  parameters = 8;
	optional string paramClassName = 9;

}

message Response {

	required int32  messageType = 1;
	required int64  transferId = 2;
	optional string rpcVersion = 3;
	
	optional bytes  return = 4;
	optional string cause = 5;

}

